--- a/src/main/resources/templates/site/letter-detail.html
+++ b/src/main/resources/templates/site/letter-detail.html
@@ -85,7 +85,7 @@
 							<form>
 								<div class="form-group">
 									<label for="recipient-name" class="col-form-label">发给：</label>
-									<input type="text" class="form-control" id="recipient-name" value="落基山脉下的闲人">
+									<input type="text" class="form-control" id="recipient-name" th:value="${target.username}">
 								</div>
 								<div class="form-group">
 									<label for="message-text" class="col-form-label">内容：</label>
@@ -124,7 +124,8 @@
 						<div class="toast-header">
 							<strong class="mr-auto" th:utext="${map.fromUser.username}">落基山脉下的闲人</strong>
 							<small th:text="${#dates.format(map.letter.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-25 15:49:32</small>
-							<button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+							<input type="hidden" th:value="${map.letter.id}">
+							<button type="button" class="ml-2 mb-1 close closemessage" data-dismiss="toast" aria-label="Close">
 								<span aria-hidden="true">&times;</span>
 							</button>
 						</div>
