关注的用户发布了帖子（推送+活跃用户（暂不启用））

--- a/src/main/resources/templates/site/notice-detail.html
+++ b/src/main/resources/templates/site/notice-detail.html
@@ -91,17 +91,26 @@
 									评论了你的<b th:text="${map.entityType==1?'帖子':'回复'}">帖子</b>,
 									<a class="text-primary" th:href="@{|/discuss/detail/${map.postId}|}">点击查看</a> !
 								</span>
-							<span th:if="${topic.equals('like')}">
+
+								<span th:if="${topic.equals('like')}">
 									用户
 									<i th:utext="${map.user.username}">nowcoder</i>
 									点赞了你的<b th:text="${map.entityType==1?'帖子':'回复'}">帖子</b>,
 									<a class="text-primary" th:href="@{|/discuss/detail/${map.postId}|}">点击查看</a> !
 								</span>
-							<span th:if="${topic.equals('follow')}">
+
+								<span th:if="${topic.equals('follow')}">
 									用户
 									<i th:utext="${map.user.username}">nowcoder</i>
 									关注了你,
 									<a class="text-primary" th:href="@{|/user/profile/${map.user.id}|}">点击查看</a> !
+								</span>
+
+								<span th:if="${topic.equals('publish')}">
+									用户
+									<i th:utext="${map.user.username}">nowcoder</i>
+									发布了新的帖子,
+									<a class="text-primary" th:href="@{|/discuss/detail/${map.postId}|}" th:utext="${map.postTitle}">点击查看</a> !
 								</span>
 						</div>
 					</div>
